--- a/package.json
+++ b/package.json
@@ -12,10 +12,20 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.8.2",
+    "@vee-validate/zod": "^4.15.0",
+    "@vueuse/core": "^12.5.0",
     "axios": "^1.7.8",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "lodash.debounce": "^4.0.8",
+    "lucide-vue-next": "^0.475.0",
+    "radix-vue": "^1.9.13",
+    "tailwind-merge": "^3.0.1",
+    "tailwindcss-animate": "^1.0.7",
+    "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
-    "vue-router": "^4.5.0"
+    "vue-router": "^4.5.0",
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.14.0",
